2002-05-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* LSODE.h (LSODE_options::x_absolute_tolerance): Now Array<double>.
	Change all uses.
	(LSODE_OPTIONS::absolute_tolerance): Return Array<double>, not double.
	(LSODE_OPTIONS::set_absolute_tolerance (const Array<double>&)):
	New function.

	* Array.h (Array::fortran_vec): New const version.

2002-05-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* cmd-edit.cc (gnu_readline::history_search_backward): New function.
	(gnu_readline::history_search_forward): Likewise.
	(gnu_readline::gnu_readline): Use them instead of passing pointers
	to extern "C" functions to octave_rl_ad_defun.

2002-05-22  Mumit Khan <khan@nanotech.wisc.edu>

	* DASPK.cc (ddaspk_psol): Return value.
	* oct-rl-edit.c: Use /* ... */ to comment.

2002-05-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASSL.h (DASSL_options::init): Undo previous change.
	(DASSL_options::set_absolute_tolerance): Likewise.
	* LSODE.h (LSODE_options::init): Likewise.
	(LSODE_options::set_absolute_tolerance): Likewise.

	* DASPK.h (DASPK_options::init): Use default absolute tolerance of
	sqrt(eps), not eps^2.
	DASPK_options::set_absolute_tolerance): Likewise.

2002-05-17  Mumit Khan <khan@nanotech.wisc.edu>

	* Array.h (Array<T>::resize_fill_value): Return default initialized
	object.

2002-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-edit.c (OCTAVE_RL_SAVE_STRING): New macro.
	(octave_rl_set_name, octave_rl_set_basic_quote_characters): Use it.
	(octave_rl_set_basic_word_break_characters,
	octave_rl_set_completer_word_break_characters): New functions.
	* oct-rl-edit.h: Provide decls.
	* cmd-edit.cc (gnu_readline::do_set_basic_word_break_characters,
	gnu_readline::do_set_completer_word_break_characters): New functions.
	(command_editor::set_basic_quote_characters,
	command_editor::set_completion_append_character): New static functions.
	* cmd-edit.h: Provide decls.
	(command_editor::do_set_basic_word_break_characters,