@@ -1,5 +1,8 @@
 2002-05-23  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* LSODE.cc (LSODE::do_integrate): Define method flag and iopt
+	here, not as class data members.	
+
 	* LSODE.h (LSODE_options::x_absolute_tolerance): Now Array<double>.
 	Change all uses.
 	(LSODE_OPTIONS::absolute_tolerance): Return Array<double>, not double.
